--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,119 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#title{
+  font-size: 1.8em;
+  text-align: left;
+  margin-left: 30px;
+  color: black;
+}
+
+.app-wrap{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button{
+  color: white;
+  background-color: #2ce6df;
+  padding: 8px;
+  border-radius: 7px;
+}
+
+.button-container{
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 10px;
+}
+
+.collection-controls{
+  padding: 5px;
+  display: flex;
+  justify-content:space-evenly;
+  float: center;
+  background-color: #587ab0;
+  border-style: hidden hidden solid hidden;
+  border-color: #46a8b3;
+  border-width: 5px;
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: repeat(4, 20%);
+  grid-template-rows: repeat(4, 20%);
+  grid-column-gap: 90px;
+  grid-row-gap: 30px;
+  padding: 50px;
+}
+
+nav{
+  padding: 30px;
+  font-size: large;
+  display: flex;
+  justify-content:space-evenly;
+  float: center;
+  background-color: #2ce6df;
+  border-style: solid hidden solid hidden;
+  border-color: #46a8b3;
+  border-width: 5px;
+}
+
+.flip-card{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 300px;
+  height: 540px;
+  flex-wrap: wrap;
+  transition: 0.3s;
+  perspective: 1000px;
+}
+
+.flip-card-inner{
+  border: 2px solid #e7e7e7;
+  border-radius: 4px;
+  padding: .5rem;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 95%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+
+button:hover, #card-button-uncollected:hover, #card-button-collected:hover {
+  color: navy;
+}
+
+#card-button-collected{
+  background-color: #db5858;
+  height: 50px;
+}
+
+#card-button-uncollected{
+  background-color: #58db67;
+  height: 50px;
+}
