--- a/client/src/index.css
+++ b/client/src/index.css
@@ -98,7 +98,7 @@ nav{
 }
 
 #movie-page{
-  
+
 }
 
 .flip-card-inner{
@@ -142,4 +142,24 @@ button:hover, #card-button-uncollected:hover, #card-button-collected:hover {
 #card-button-uncollected{
   background-color: #58db67;
   height: 50px;
+}
+
+.movie-page{
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  grid-template-rows: 1fr;
+}
+
+#movie-page-card{
+  margin-left: 50px;
+}
+
+.column{
+  margin-left: 50px;
+}
+
+.movie-page-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
