--- a/client/src/index.css
+++ b/client/src/index.css
@@ -49,9 +49,8 @@ button, .button{
   top: 30px;
   right: 30px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
-  grid-column-gap: 10px;
 }
 
 .collection-controls{
@@ -95,10 +94,6 @@ nav{
   flex-wrap: wrap;
   transition: 0.3s;
   perspective: 1000px;
-}
-
-#movie-page{
-
 }
 
 .flip-card-inner{
@@ -161,5 +156,14 @@ button:hover, #card-button-uncollected:hover, #card-button-collected:hover {
 .movie-page-title{
   display: flex;
   justify-content: center;
-  align-items: center;
+}
+
+.poster {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.poster:hover {
+  box-shadow: 0 15px 22px 0 rgba(0,0,0,0.2);
 }
