--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,12 +88,21 @@ button, input[type='submit']{
   border-color: rgb(94, 2, 2);
 }
 
-.grid{
+.grid {
   display: grid;
   grid-template-columns: repeat(4, 20%);
   grid-template-rows: repeat(4, 20%);
   grid-column-gap: 90px;
-  grid-row-gap: 30px;
+  grid-row-gap: 40px;
+  padding: 50px;
+}
+
+.collection-grid{
+  display: grid;
+  grid-template-columns: repeat(4, 20%);
+  grid-template-rows: repeat(4, 20%);
+  grid-column-gap: 90px;
+  grid-row-gap: 190px;
   padding: 50px;
 }
 
