credited third party api for data

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -329,3 +329,8 @@ input:checked[type='checkbox']:before {
 #favorite-toggle:checked:before{
   left: 873px;
 }
+
+#credit{
+  position: relative;
+  top: 80px;
+}
