added collection btn to movie page component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -280,7 +280,8 @@ button:hover, #card-button-uncollected:hover, #card-button-collected:hover {
 }
 
 .hidden{
-  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 1s, opacity 1s linear;
 }
 
 .dark-mode-label{
