--- a/client/src/index.css
+++ b/client/src/index.css
@@ -126,6 +126,30 @@ button, input[type='submit'], .password-toggle{
   padding: 50px;
 }
 
+@media screen and (max-width: 700px){
+  .grid{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(20, 5%);
+    grid-column-gap: 0;
+    grid-row-gap: 20px;
+    padding: 20px;
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 700px) and (max-width: 800px){
+  .grid{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: repeat(10, 10%);
+    grid-column-gap: 0;
+    grid-row-gap: 30px;
+    padding: 20px;
+    margin-left: 30px;
+  }
+}
+
 .grid-parent{
   justify-content: start;
 }
