--- a/client/src/index.css
+++ b/client/src/index.css
@@ -298,6 +298,10 @@ button:hover, #card-button-uncollected:hover, #card-button-collected:hover {
   justify-content: center;
 }
 
+.home{
+  text-align: center;
+}
+
 .poster {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
