--- a/client/src/index.css
+++ b/client/src/index.css
@@ -135,7 +135,7 @@ button, input[type='submit'], .password-toggle{
   padding: 50px;
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 750px){
   .grid{
     display: grid;
     grid-template-columns: 100%;
@@ -143,7 +143,7 @@ button, input[type='submit'], .password-toggle{
     grid-column-gap: 0;
     grid-row-gap: 20px;
     padding: 20px;
-    margin-left: 30px;
+    margin-left: 10px;
   }
 
   .collection-grid{
@@ -152,11 +152,11 @@ button, input[type='submit'], .password-toggle{
     grid-column-gap: 90px;
     grid-row-gap: 50px;
     padding: 20px;
-    margin-left: 20%;
+    margin-left: 10%;
   }
 }
 
-@media screen and (min-width: 700px) and (max-width: 1000px){
+@media screen and (min-width: 750px) and (max-width: 1000px){
   .grid{
     display: grid;
     grid-template-columns: 50% 50%;
@@ -391,12 +391,12 @@ input:checked[type='checkbox']:before {
 }
 
 #favorite-toggle:before{
-  top: 219px;
-  left: 850px;
+  top: 30%;
+  left: 56%;
 }
 
 #favorite-toggle:checked:before{
-  left: 870px;
+  left: 57.5%;
 }
 
 .favorite-heart{
