--- a/client/src/index.css
+++ b/client/src/index.css
@@ -157,7 +157,12 @@ button, input[type='submit'], .password-toggle{
     grid-column-gap: 90px;
     grid-row-gap: 50px;
     padding: 20px;
-    margin-left: 10%;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .button-container{
+    position: static;
   }
 }
 
@@ -358,50 +363,60 @@ button:hover, #card-button-uncollected:hover, #card-button-collected:hover {
 
 .dark-mode-label{
   position: relative;
-  bottom: 9px;
-  right: 10px
+  right: 10px;
 }
 
-input[type="checkbox"] {
-  -webkit-appearance: none;
-  background: #c6c6c6;
-  border-radius: 50px;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-  transition: 0.5s;
-  width: 40px;
-  height: 20px;
-  cursor: pointer;
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 25px;
 }
 
-input:checked[type='checkbox']{
-  background: #03a9f4;
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
-input[type='checkbox']:before{
-  content: '';
+.slider {
   position: absolute;
-  border-radius: 50px;
-  background: #fff;
-  top: 15px;
-  left: 233px;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
   height: 20px;
   width: 20px;
-  transform: scale(1.1);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  transition: 0.5s;
+  left: 3px;
+  bottom: 2.5px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
 }
 
-input:checked[type='checkbox']:before {
-  left: 255px;
+input:checked + .slider {
+  background-color: #2196F3;
 }
 
-#favorite-toggle:before{
-  top: 30%;
-  left: 56%;
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
 }
 
-#favorite-toggle:checked:before{
-  left: 57.5%;
+input:checked + .slider:before {
+  -webkit-transform: translateX(24px);
+  -ms-transform: translateX(24px);
+  transform: translateX(24px);
 }
 
 .favorite-heart{
