--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,18 +99,20 @@ button, input[type='submit'], .password-toggle{
   grid-template-rows: 1fr;
   grid-column-gap: 20px;
   align-items: center;
+  padding: 10px;
 }
 
 .collection-controls{
   padding: 5px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   float: center;
   background-color: #587ab0;
   border-style: hidden hidden solid hidden;
   border-color: #46a8b3;
   border-width: 5px;
+  width: 100%;
 }
 
 #collection-dark{
@@ -177,10 +179,15 @@ button, input[type='submit'], .password-toggle{
     margin-left: 30px;
   }
 
+  .grid-container{
+    display: flex;
+    justify-content: center;
+  }
+
   .collection-grid{
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    grid-column-gap: 0;
+    grid-column-gap: 20px;
     grid-row-gap: 50px;
     padding: 10%;
   }
@@ -421,6 +428,10 @@ input:checked + .slider:before {
 
 .favorite-heart{
   cursor: pointer;
+}
+
+.favorite-label{
+  margin-right: 10px;
 }
 
 #credit{
