--- a/client/src/index.css
+++ b/client/src/index.css
@@ -137,6 +137,17 @@ button, input[type='submit'], .password-toggle{
   padding: 50px;
 }
 
+.home-video{
+  width: 560px; 
+  height: 315px;
+}
+
+@media screen and (max-width: 550px){
+  .home-video{
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 750px){
   .grid{
     display: grid;
