--- a/client/src/index.css
+++ b/client/src/index.css
@@ -472,12 +472,10 @@ input:checked + .slider:before {
   margin-right: 10px;
 }
 
-.profile-grid{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-column-gap: 20px;
-  padding: 10px;
+.profile{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
 }
 
 .pfp{
